Fix: First container handle is not centered on an RTL page  [ED-7788]

--- a/assets/dev/scss/editor/preview/preview.scss
+++ b/assets/dev/scss/editor/preview/preview.scss
@@ -449,6 +449,9 @@ html.elementor-html {
 
 	> .elementor-element-overlay > .elementor-editor-element-settings {
 		transform: translateX(-50%);
+	  	@if 'rtl' == $direction {
+		  transform: translateX(50%);
+	  	}
 		border-radius: 0 0 5px 5px;
 
 		.elementor-editor-element-setting {
